--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,7 @@
 </head>
 
 <body class="bg-gray-50 dark:bg-slate-900 transition-colors duration-200">
-    <div x-data="terminalApp()" @mousemove.window="doResize()" @mouseup.window="stopResizing()"
+    <div x-data="terminalApp()" @mousemove.window="doResize($event)" @mouseup.window="stopResizing()"
         class="h-screen flex flex-col relative">
         <header
             class="bg-gray-100 dark:bg-slate-900 border-b border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200 flex items-center px-3 py-1.5 select-none text-xs h-10 shrink-0"
@@ -341,11 +341,13 @@
                         x-transition:enter="transform transition ease-out duration-200"
                         x-transition:enter-start="-translate-x-full" x-transition:enter-end="translate-x-0"
                         x-transition:leave="transform transition ease-in duration-150"
-                        x-transition:leave-start="translate-x-0" x-transition:leave-end="-translate-x-full">
+                        x-transition:leave-start="translate-x-0" x-transition:leave-end="-translate-x-full"
+                        style="overflow: visible;">
 
                         <!-- Resize Handle (Gutter) -->
-                        <div @mousedown="startResizing"
-                            class="absolute top-0 right-0 w-1.5 h-full cursor-ew-resize hover:bg-indigo-500/50 transition-colors z-50">
+                        <div @mousedown.stop="startResizing($event)"
+                            class="absolute top-0 right-0 w-2 h-full cursor-ew-resize hover:bg-indigo-500/50 active:bg-indigo-500/70 transition-colors"
+                            style="touch-action: none; z-index: 9999; pointer-events: auto;">
                         </div>
 
                         <!-- Commands View -->
