--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1207,10 +1207,10 @@
                                 </p>
                             </div>
 
-                            <div class="flex-1 overflow-y-auto p-3 space-y-3">
+                            <div class="flex-1 overflow-y-auto p-3 space-y-3 min-w-0">
                                 <!-- Connection Mode -->
                                 <div
-                                    class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200">
+                                    class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200 min-w-0">
                                     <label class="block text-xs font-semibold text-gray-700 dark:text-slate-300 mb-2">
                                         Connection Mode
                                     </label>
@@ -1229,17 +1229,18 @@
                                 </div>
 
                                 <!-- Serial Settings -->
-                                <div x-show="connectionMode === 'serial'" class="space-y-3">
+                                <div x-show="connectionMode === 'serial'" class="space-y-3 min-w-0">
                                     <div
-                                        class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200">
+                                        class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200 min-w-0">
                                         <label
                                             class="block text-xs font-semibold text-gray-700 dark:text-slate-300 mb-2">
                                             Serial Port
                                         </label>
-                                        <div class="flex space-x-2 mb-2">
+                                        <div class="flex space-x-2 mb-2 min-w-0">
                                             <select x-model="selectedPort" @keydown.enter="saveSettings()"
-                                                class="flex-1 px-2 py-1.5 bg-gray-50 dark:bg-slate-900 border border-gray-300 dark:border-slate-700 rounded text-xs text-gray-900 dark:text-slate-200 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-transparent"
-                                                :disabled="loadingPorts">
+                                                class="flex-1 min-w-0 px-2 py-1.5 bg-gray-50 dark:bg-slate-900 border border-gray-300 dark:border-slate-700 rounded text-xs text-gray-900 dark:text-slate-200 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-transparent"
+                                                :disabled="loadingPorts"
+                                                style="max-width: 100%; overflow: hidden; text-overflow: ellipsis;">
                                                 <option value="">Select a port...</option>
                                                 <template x-for="port in availablePorts" :key="port.device">
                                                     <option :value="port.device"
