--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1709,7 +1709,7 @@
             <!-- Custom Command Modal -->
             <div x-show="showCustomCommandModal" class="fixed inset-0 z-[100] overflow-y-auto" x-cloak
                 style="display: none;">
-                <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                <div class="flex items-center justify-center min-h-screen px-4 py-4">
                     <!-- Overlay -->
                     <div x-show="showCustomCommandModal" x-transition:enter="ease-out duration-300"
                         x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
@@ -1725,7 +1725,7 @@
                         x-transition:leave="ease-in duration-200"
                         x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
                         x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                        class="inline-block w-full max-w-lg overflow-hidden text-left align-bottom transition-all transform bg-white dark:bg-slate-800 rounded-xl shadow-2xl sm:my-8 sm:align-middle">
+                        class="inline-block w-full max-w-lg overflow-hidden text-left transition-all transform bg-white dark:bg-slate-800 rounded-xl shadow-2xl my-auto">
 
                         <div
                             class="px-6 py-4 border-b border-gray-200 dark:border-slate-700 flex items-center justify-between bg-gray-50/50 dark:bg-slate-750/50">
@@ -1821,7 +1821,7 @@
 
             <!-- Welcome Modal -->
             <div x-show="showWelcomeModal" class="fixed inset-0 z-[110] overflow-y-auto" x-cloak>
-                <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                <div class="flex items-center justify-center min-h-screen px-4 py-4">
                     <div x-show="showWelcomeModal" x-transition:enter="ease-out duration-300"
                         x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
                         x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100"
@@ -1835,7 +1835,7 @@
                         x-transition:leave="ease-in duration-200"
                         x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
                         x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                        class="inline-block w-full max-w-lg overflow-hidden text-left align-bottom transition-all transform bg-white dark:bg-slate-800 rounded-2xl shadow-2xl sm:my-8 sm:align-middle">
+                        class="inline-block w-full max-w-lg overflow-hidden text-left transition-all transform bg-white dark:bg-slate-800 rounded-2xl shadow-2xl my-auto">
 
                         <div class="bg-indigo-600 px-6 py-8 text-center relative overflow-hidden">
                             <!-- Background Decor -->
@@ -1933,7 +1933,7 @@
 
             <!-- About Modal -->
             <div x-show="showAbout" class="fixed inset-0 z-[100] overflow-y-auto" x-cloak style="display: none;">
-                <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                <div class="flex items-center justify-center min-h-screen px-4 py-4">
                     <div x-show="showAbout" x-transition:enter="ease-out duration-300"
                         x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
                         x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100"
@@ -1948,7 +1948,7 @@
                         x-transition:leave="ease-in duration-200"
                         x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
                         x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                        class="inline-block w-full max-w-md overflow-hidden text-left align-bottom transition-all transform bg-white dark:bg-slate-800 rounded-xl shadow-2xl sm:my-8 sm:align-middle">
+                        class="inline-block w-full max-w-md overflow-hidden text-left transition-all transform bg-white dark:bg-slate-800 rounded-xl shadow-2xl my-auto">
 
                         <div class="px-6 py-10 text-center">
                             <div
