--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1207,6 +1207,22 @@
                                     </p>
                                 </div>
 
+                                <!-- Command Selection Modal Toggle -->
+                                <div
+                                    class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200">
+                                    <label class="inline-flex items-center cursor-pointer">
+                                        <input type="checkbox" x-model="enableCommandSelectionModal"
+                                            class="w-3.5 h-3.5 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 dark:bg-slate-900 dark:border-slate-700">
+                                        <span class="ml-2 text-xs font-medium text-gray-700 dark:text-slate-300">
+                                            Show command selection modal after initial scan
+                                        </span>
+                                    </label>
+                                    <p class="text-[10px] text-gray-500 dark:text-slate-400 mt-1 ml-6">
+                                        When enabled, a modal will appear after the initial command scan allowing you to
+                                        select which commands to include in the deep subcommand scan.
+                                    </p>
+                                </div>
+
                             </div>
                         </div>
 
@@ -1994,6 +2010,96 @@
                                 </button>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Command Selection Modal -->
+        <div x-show="showCommandSelectionModal" x-cloak class="fixed inset-0 z-[100] overflow-y-auto"
+            style="display: none;">
+            <div class="flex items-center justify-center min-h-screen px-4 py-4">
+                <!-- Overlay -->
+                <div x-show="showCommandSelectionModal" x-transition:enter="ease-out duration-300"
+                    x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                    x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100"
+                    x-transition:leave-end="opacity-0"
+                    class="fixed inset-0 transition-opacity bg-gray-900/75 backdrop-blur-sm"
+                    @click="closeCommandSelectionModal()"></div>
+
+                <!-- Modal Window -->
+                <div x-show="showCommandSelectionModal" x-transition:enter="ease-out duration-300"
+                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                    x-transition:leave="ease-in duration-200"
+                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                    class="inline-block w-full max-w-2xl overflow-hidden text-left my-auto transition-all transform bg-white dark:bg-slate-800 rounded-xl shadow-2xl">
+
+                    <!-- Header -->
+                    <div
+                        class="px-6 py-4 border-b border-gray-200 dark:border-slate-700 bg-gradient-to-r from-indigo-500 to-purple-500">
+                        <h3 class="text-lg font-semibold text-white">Select Commands for Deep Scan</h3>
+                        <p class="text-sm text-indigo-100 mt-1">
+                            Choose which commands to include in the deep subcommand discovery. This will scan for nested
+                            subcommands within each selected command.
+                        </p>
+                    </div>
+
+                    <!-- Content -->
+                    <div class="px-6 py-4 max-h-96 overflow-y-auto">
+                        <!-- Select All / Deselect All Buttons -->
+                        <div class="flex gap-2 mb-4">
+                            <button @click="selectAllCommands()"
+                                class="px-3 py-1.5 text-xs font-medium text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 bg-indigo-50 dark:bg-indigo-900/30 rounded-md hover:bg-indigo-100 dark:hover:bg-indigo-900/50 transition-colors">
+                                Select All
+                            </button>
+                            <button @click="deselectAllCommands()"
+                                class="px-3 py-1.5 text-xs font-medium text-gray-600 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300 bg-gray-50 dark:bg-slate-700 rounded-md hover:bg-gray-100 dark:hover:bg-slate-600 transition-colors">
+                                Deselect All
+                            </button>
+                            <div class="ml-auto text-xs text-gray-500 dark:text-slate-400 flex items-center">
+                                <span
+                                    x-text="selectedCommandsForDeepScan.length + ' of ' + topLevelCommands.length + ' selected'"></span>
+                            </div>
+                        </div>
+
+                        <!-- Command List -->
+                        <div class="space-y-2">
+                            <template x-for="(cmd, index) in topLevelCommands" :key="index">
+                                <label
+                                    class="flex items-start p-3 rounded-lg border border-gray-200 dark:border-slate-700 hover:bg-gray-50 dark:hover:bg-slate-700/50 cursor-pointer transition-colors">
+                                    <input type="checkbox"
+                                        :checked="cmd && cmd.id && selectedCommandsForDeepScan.includes(cmd.id)"
+                                        @change="cmd && cmd.id && toggleCommandSelection(cmd.id)"
+                                        class="mt-0.5 w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 dark:bg-slate-900 dark:border-slate-700">
+                                    <div class="ml-3 flex-1" x-show="cmd && cmd.id">
+                                        <div class="text-sm font-medium text-gray-900 dark:text-slate-200"
+                                            x-text="cmd.name || 'Unknown'"></div>
+                                        <div class="text-xs text-gray-500 dark:text-slate-400 mt-0.5"
+                                            x-text="cmd.description || 'No description available'"></div>
+                                    </div>
+                                </label>
+                            </template>
+                            <div x-show="!topLevelCommands || topLevelCommands.length === 0"
+                                class="text-center py-8 text-gray-500 dark:text-slate-400">
+                                <p>No commands found. Please scan commands first.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Footer -->
+                    <div
+                        class="px-6 py-4 border-t border-gray-200 dark:border-slate-700 bg-gray-50 dark:bg-slate-900/50 flex justify-end gap-3">
+                        <button @click="closeCommandSelectionModal()"
+                            class="px-4 py-2 text-sm font-medium text-gray-700 dark:text-slate-300 bg-white dark:bg-slate-700 border border-gray-300 dark:border-slate-600 rounded-md hover:bg-gray-50 dark:hover:bg-slate-600 transition-colors">
+                            Cancel
+                        </button>
+                        <button @click="closeCommandSelectionModal()"
+                            :disabled="selectedCommandsForDeepScan.length === 0"
+                            class="px-4 py-2 text-sm font-medium text-white bg-gradient-to-r from-indigo-500 to-purple-500 hover:from-indigo-600 hover:to-purple-600 disabled:opacity-50 disabled:cursor-not-allowed rounded-md transition-all shadow-sm">
+                            Start Deep Scan
+                        </button>
                     </div>
                 </div>
             </div>
