--- a/frontend/index.html
+++ b/frontend/index.html
@@ -226,7 +226,7 @@
                     <button @click="openMenu('tools')" class="px-3 py-1 rounded transition-colors"
                         :class="activeMenu === 'tools' ? 'bg-gray-200 dark:bg-slate-700 text-slate-900 dark:text-white' : 'hover:bg-gray-200 dark:hover:bg-slate-800 hover:text-slate-900 dark:hover:text-white'">Tools</button>
                     <div x-show="activeMenu === 'tools'"
-                        class="absolute left-0 top-full mt-1 w-48 bg-white dark:bg-slate-800 border border-gray-200 dark:border-slate-600 rounded-lg shadow-lg z-50 py-1"
+                        class="absolute left-0 top-full mt-1 w-64 bg-white dark:bg-slate-800 border border-gray-200 dark:border-slate-600 rounded-lg shadow-lg z-50 py-1"
                         style="display: none;">
                         <button @click="activeView = 'commands'; closeMenu()"
                             class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">Command
@@ -366,12 +366,14 @@
                                             commands</p>
                                     </div>
                                     <div class="flex items-center gap-2">
-                                        <button x-show="selectionMode && selectedCommandIds.length > 0"
-                                            @click="deleteSelectedCommands()"
-                                            class="p-1.5 bg-rose-50 dark:bg-rose-900/30 text-rose-600 dark:text-rose-400 rounded-md hover:bg-rose-100 dark:hover:bg-rose-900/50 transition-colors"
-                                            title="Delete Selected">
+                                        <!-- Enter selection mode (multi-delete) -->
+                                        <button @click="toggleSelectionMode()" :disabled="selectedCommand !== null"
+                                            :class="selectionMode ? 'bg-rose-500 text-white hover:bg-rose-600' : 'bg-indigo-50 dark:bg-indigo-900/30 text-indigo-600 dark:text-indigo-400 hover:bg-indigo-100 dark:hover:bg-indigo-900/50'"
+                                            class="p-1.5 rounded-md transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
+                                            :title="selectionMode ? 'Cancel Selection' : 'Select Commands to Delete'">
                                             <span class="codicon codicon-trash" style="font-size: 16px;"></span>
                                         </button>
+                                        <!-- Add Custom Command -->
                                         <button @click="openCustomCommandModal()"
                                             class="p-1.5 bg-indigo-50 dark:bg-indigo-900/30 text-indigo-600 dark:text-indigo-400 rounded-md hover:bg-indigo-100 dark:hover:bg-indigo-900/50 transition-colors"
                                             title="Add Custom Command">
@@ -404,10 +406,9 @@
                                     </div>
                                 </div>
 
-                                <!-- Select Mode Toggle -->
-                                <!-- Select Mode Toggle and Actions -->
-                                <div class="mt-2 flex items-center justify-between gap-2">
-                                    <div class="flex items-center gap-2" x-show="selectionMode">
+                                <!-- Select Mode Actions (shown when in selection mode) -->
+                                <div class="mt-2 flex items-center justify-between gap-2" x-show="selectionMode">
+                                    <div class="flex items-center gap-2">
                                         <button @click="selectAllCommandsForDelete()"
                                             class="px-2.5 py-1.5 text-xs font-medium text-indigo-600 dark:text-indigo-400 hover:bg-indigo-50 dark:hover:bg-indigo-500/10 rounded-md transition-colors">
                                             Select All
@@ -417,12 +418,6 @@
                                             Deselect All
                                         </button>
                                     </div>
-                                    <button @click="toggleSelectionMode()" :disabled="selectedCommand !== null"
-                                        :class="selectionMode ? 'bg-rose-500 text-white' : 'bg-gray-200 dark:bg-slate-700 text-gray-700 dark:text-slate-300'"
-                                        class="p-1.5 rounded-md hover:bg-rose-600 dark:hover:bg-rose-600 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed ml-auto"
-                                        :title="selectionMode ? 'Cancel Selection' : 'Select Commands to Delete'">
-                                        <span class="codicon codicon-trash" style="font-size: 16px;"></span>
-                                    </button>
                                 </div>
 
                                 <!-- Discovery progress -->
@@ -709,7 +704,11 @@
                                                 <button @click="deleteSelectedCommands()"
                                                     class="px-4 py-1.5 text-xs font-medium text-white bg-rose-500 hover:bg-rose-600 dark:bg-rose-600 dark:hover:bg-rose-700 rounded-md transition-colors flex items-center gap-1.5">
                                                     <span class="codicon codicon-trash" style="font-size: 14px;"></span>
-                                                    Delete (<span x-text="selectedCommandIds.length"></span>)
+                                                    <span class="inline-flex items-center gap-0.5">
+                                                        <span>Delete (</span>
+                                                        <span x-text="selectedCommandIds.length"></span>
+                                                        <span>)</span>
+                                                    </span>
                                                 </button>
                                             </div>
                                         </div>
@@ -1311,10 +1310,12 @@
                             <!-- Header -->
                             <div class="p-4 border-b border-gray-200 dark:border-slate-700">
                                 <h2 class="text-lg font-semibold text-gray-900 dark:text-slate-100">Connection</h2>
-                                <p class="text-xs text-gray-500 dark:text-slate-400 mt-0.5">Manage terminal connections
+                                <p class="text-xs text-gray-500 dark:text-slate-400 mt-0.5">
+                                    Manage terminal connections
                                 </p>
                             </div>
 
+                            <!-- Scrollable connection settings -->
                             <div class="flex-1 overflow-y-auto p-3 space-y-3 min-w-0">
                                 <!-- Connection Mode -->
                                 <div
@@ -1356,6 +1357,7 @@
                                                     </option>
                                                 </template>
                                             </select>
+                                            <!-- Rescan ports -->
                                             <button @click="loadPorts()"
                                                 class="px-2 py-1.5 bg-gray-200 dark:bg-slate-700 hover:bg-gray-300 dark:hover:bg-slate-600 rounded text-xs font-medium text-gray-600 dark:text-slate-300"
                                                 :disabled="loadingPorts">
@@ -1476,48 +1478,48 @@
                                         </p>
                                     </div>
                                 </div>
+                            </div>
 
-                                <!-- Connect Button (Bottom) -->
-                                <div class="border-t border-gray-200 dark:border-slate-700 p-3">
-                                    <button @click="saveSettings()" :disabled="connecting"
-                                        class="w-full flex items-center justify-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 disabled:cursor-not-allowed text-white text-sm font-medium rounded-lg shadow-md transition-all duration-200">
-                                        <!-- Loading Spinner -->
-                                        <svg x-show="connectButtonState === 'connecting'"
-                                            class="animate-spin -ml-1 mr-3 h-4 w-4 text-white"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
-                                                stroke-width="4">
-                                            </circle>
-                                            <path class="opacity-75" fill="currentColor"
-                                                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
-                                            </path>
-                                        </svg>
-                                        <!-- Connect Icon -->
-                                        <svg x-show="connectButtonState === 'connect'" class="w-4 h-4 mr-2" fill="none"
-                                            stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M13 10V3L4 14h7v7l9-11h-7z"></path>
-                                        </svg>
-                                        <!-- Switch Icon -->
-                                        <svg x-show="connectButtonState === 'switch'" class="w-4 h-4 mr-2" fill="none"
-                                            stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
-                                        </svg>
-                                        <!-- Disconnect Icon -->
-                                        <svg x-show="connectButtonState === 'disconnect'" class="w-4 h-4 mr-2"
-                                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M6 18L18 6M6 6l12 12"></path>
-                                        </svg>
-                                        <span x-text="{
+                            <!-- Connect Button (Bottom, always visible at bottom of panel) -->
+                            <div class="border-t border-gray-200 dark:border-slate-700 p-3">
+                                <button @click="saveSettings()" :disabled="connecting"
+                                    class="w-full flex items-center justify-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 disabled:opacity-50 disabled:cursor-not-allowed text-white text-sm font-medium rounded-lg shadow-md transition-all duration-200">
+                                    <!-- Loading Spinner -->
+                                    <svg x-show="connectButtonState === 'connecting'"
+                                        class="animate-spin -ml-1 mr-3 h-4 w-4 text-white"
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor"
+                                            stroke-width="4">
+                                        </circle>
+                                        <path class="opacity-75" fill="currentColor"
+                                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                        </path>
+                                    </svg>
+                                    <!-- Connect Icon -->
+                                    <svg x-show="connectButtonState === 'connect'" class="w-4 h-4 mr-2" fill="none"
+                                        stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                                    </svg>
+                                    <!-- Switch Icon -->
+                                    <svg x-show="connectButtonState === 'switch'" class="w-4 h-4 mr-2" fill="none"
+                                        stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"></path>
+                                    </svg>
+                                    <!-- Disconnect Icon -->
+                                    <svg x-show="connectButtonState === 'disconnect'" class="w-4 h-4 mr-2" fill="none"
+                                        stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M6 18L18 6M6 6l12 12"></path>
+                                    </svg>
+                                    <span x-text="{
                                 'connecting': 'Connecting...',
                                 'connect': 'Connect',
                                 'switch': 'Switch to Tab',
                                 'disconnect': 'Disconnect'
                             }[connectButtonState]"></span>
-                                    </button>
-                                </div>
+                                </button>
                             </div>
                     </aside>
 
