feat: add loading modal with spinner to enhance user experience during webview initialization

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,6 +128,21 @@
             animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
         }
 
+        /* Loading spinner animation */
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .spinner {
+            animation: spin 1s linear infinite;
+        }
+
         [x-cloak] {
             display: none !important;
         }
@@ -137,11 +152,66 @@
 <body class="bg-gray-50 dark:bg-slate-900 transition-colors duration-200">
     <div x-data="terminalApp()" x-init="init()" @mousemove.window="doResize($event)" @mouseup.window="stopResizing()"
         class="h-screen flex flex-col relative">
-        <!-- Blocking overlay to prevent interactions until webview is ready -->
-        <div x-show="!webviewReady" x-cloak 
-            class="fixed inset-0 bg-gray-50 dark:bg-slate-900 z-[9999] pointer-events-auto"
-            @keydown.stop @keyup.stop @mousedown.stop @mouseup.stop @click.stop
-            style="display: none;">
+        <!-- Loading modal with spinner - shown until webview is ready -->
+        <div x-show="!webviewReady" class="fixed inset-0 z-[9999] overflow-y-auto" x-cloak @keydown.stop @keyup.stop
+            @mousedown.stop @mouseup.stop @click.stop style="display: none;">
+            <div class="flex items-center justify-center min-h-screen px-4 py-4">
+                <!-- Backdrop -->
+                <div x-show="!webviewReady" x-transition:enter="ease-out duration-300"
+                    x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                    x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100"
+                    x-transition:leave-end="opacity-0"
+                    class="fixed inset-0 transition-opacity bg-gray-900/80 backdrop-blur-md">
+                </div>
+
+                <!-- Modal Card -->
+                <div x-show="!webviewReady" x-transition:enter="ease-out duration-300"
+                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                    x-transition:leave="ease-in duration-200"
+                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                    class="inline-block w-full max-w-md overflow-hidden text-left transition-all transform bg-white dark:bg-slate-800 rounded-2xl shadow-2xl my-auto pointer-events-auto">
+
+                    <!-- Header Section -->
+                    <div class="bg-indigo-600 px-6 py-8 text-center relative overflow-hidden">
+                        <!-- Background Decor -->
+                        <div class="absolute top-0 left-0 w-full h-full opacity-10 pointer-events-none">
+                            <svg class="w-full h-full" viewBox="0 0 100 100" preserveAspectRatio="none">
+                                <path d="M0 100 C 20 0 50 0 100 100 Z" fill="white"></path>
+                            </svg>
+                        </div>
+
+                        <div class="relative z-10">
+                            <!-- Logo -->
+                            <div
+                                class="w-20 h-20 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-4 border border-white/30 overflow-hidden">
+                                <img src="logo.png" alt="ZField Logo" class="w-full h-full object-cover">
+                            </div>
+                            <!-- Spinner -->
+                            <div class="inline-block mb-2">
+                                <svg class="spinner w-10 h-10 text-white" fill="none" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <circle class="opacity-30" cx="12" cy="12" r="10" stroke="currentColor"
+                                        stroke-width="4"></circle>
+                                    <path class="opacity-75" fill="currentColor"
+                                        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                                    </path>
+                                </svg>
+                            </div>
+                            <h3 class="text-2xl font-black text-white tracking-tight">Loading ZField</h3>
+                            <p class="text-indigo-100 mt-1 text-sm font-medium">Initializing application...</p>
+                        </div>
+                    </div>
+
+                    <!-- Content Section -->
+                    <div class="px-6 py-6 text-center">
+                        <p class="text-sm text-gray-600 dark:text-slate-400">
+                            Please wait while the application loads
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <header
             class="bg-gray-100 dark:bg-slate-900 border-b border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200 flex items-center px-3 py-1.5 select-none text-xs h-10 shrink-0"
