feat: enhance multi-select functionality for command management; improve selection handling, add logging for selection changes, and update UI behavior for action bar visibility

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -600,9 +600,9 @@
 
                                 <!-- Commands List (Flat Reorderable) -->
                                 <div x-show="!loadingCommands && commands.length > 0 && !selectedCommand"
-                                    class="space-y-1 relative pb-16" @dragover.prevent="if (!selectionMode)"
-                                    @dragend.window="if (!selectionMode) { draggedCommandId = null; dragOverCommandId = null }"
-                                    @dragleave.self="if (!selectionMode) dragOverCommandId = null">
+                                    class="space-y-1 relative pb-16" @dragover.prevent
+                                    @dragend.window="selectionMode || (draggedCommandId = null, dragOverCommandId = null)"
+                                    @dragleave.self="selectionMode || (dragOverCommandId = null)">
                                     <template
                                         x-for="(cmd, index) in commands.filter(c => !searchCommands || 
                                         (c.fullName || c.name || '').toLowerCase().includes(searchCommands.toLowerCase()) || 
@@ -630,7 +630,13 @@
                                                 <div x-show="selectionMode" class="flex items-center">
                                                     <input type="checkbox"
                                                         :checked="isCommandSelected(cmd.id || (cmd.fullName || cmd.name))"
-                                                        @change="toggleCommandSelection(cmd.id || (cmd.fullName || cmd.name))"
+                                                        @click.stop="
+                                                            console.log('[multi-select] checkbox @click event', cmd.id || (cmd.fullName || cmd.name));
+                                                            selectedCommandIds = isCommandSelected(cmd.id || (cmd.fullName || cmd.name))
+                                                                ? selectedCommandIds.filter(id => id !== (cmd.id || (cmd.fullName || cmd.name)))
+                                                                : [...selectedCommandIds, (cmd.id || (cmd.fullName || cmd.name))];
+                                                            console.log('[multi-select] selection after checkbox', selectedCommandIds);
+                                                        "
                                                         class="w-4 h-4 text-indigo-600 bg-gray-100 border-gray-300 rounded focus:ring-indigo-500 dark:bg-slate-900 dark:border-slate-700 cursor-pointer">
                                                 </div>
 
@@ -658,8 +664,17 @@
                                                 </button>
 
                                                 <!-- Command Name & Badges -->
-                                                <div class="flex-1 min-w-0 flex items-center gap-1"
-                                                    @click="selectionMode ? toggleCommandSelection(cmd.id || (cmd.fullName || cmd.name)) : (selectedCommand = cmd)">
+                                                <div class="flex-1 min-w-0 flex items-center gap-1" @click="
+                                                        if (selectionMode) {
+                                                            const key = cmd.id || (cmd.fullName || cmd.name);
+                                                            selectedCommandIds = isCommandSelected(key)
+                                                                ? selectedCommandIds.filter(id => id !== key)
+                                                                : [...selectedCommandIds, key];
+                                                            console.log('[multi-select] selection after row click', selectedCommandIds);
+                                                        } else {
+                                                            selectedCommand = cmd;
+                                                        }
+                                                    ">
                                                     <span class="font-mono text-[11px] truncate leading-tight"
                                                         :class="cmd.isCustom ? 'text-indigo-600 dark:text-indigo-400 font-bold' : 'text-gray-800 dark:text-slate-200'"
                                                         x-text="cmd.fullName || cmd.name"></span>
@@ -759,11 +774,10 @@
                                     </template>
 
                                     <!-- Floating Action Bar (visible when items are selected) -->
-                                    <div x-show="selectionMode && selectedCommandIds.length > 0"
-                                        x-transition:enter="transition ease-out duration-200"
-                                        x-transition:enter-start="opacity-0 translate-y-4"
-                                        x-transition:enter-end="opacity-100 translate-y-0"
-                                        class="sticky bottom-0 left-0 right-0 bg-white dark:bg-slate-800 border-t border-gray-200 dark:border-slate-700 shadow-lg p-3 mt-2 rounded-t-lg z-10">
+                                    <div x-effect="console.log('[multi-select] action bar reactive', { selectionMode, selectedCount: selectedCommandIds.length, shouldShow: shouldShowActionBar() })"
+                                        :class="shouldShowActionBar() ? 'opacity-100 translate-y-0' : 'opacity-0 -translate-y-4 pointer-events-none'"
+                                        class="sticky bottom-0 left-0 right-0 bg-white dark:bg-slate-800 border-t border-gray-200 dark:border-slate-700 shadow-lg p-3 mt-2 rounded-t-lg z-50 transition-all duration-200"
+                                        style="transform: translateY(0);">
                                         <div class="flex items-center justify-between gap-3">
                                             <div class="flex items-center gap-2">
                                                 <span class="text-sm font-medium text-gray-700 dark:text-slate-300">
