--- a/frontend/index.html
+++ b/frontend/index.html
@@ -445,12 +445,14 @@
                                             commands</p>
                                     </div>
                                     <div class="flex items-center gap-2">
-                                        <button x-show="selectionMode && selectedCommandIds.length > 0"
-                                            @click="deleteSelectedCommands()"
-                                            class="p-1.5 bg-rose-50 dark:bg-rose-900/30 text-rose-600 dark:text-rose-400 rounded-md hover:bg-rose-100 dark:hover:bg-rose-900/50 transition-colors"
-                                            title="Delete Selected">
+                                        <!-- Enter selection mode (multi-delete) -->
+                                        <button @click="toggleSelectionMode()" :disabled="selectedCommand !== null"
+                                            :class="selectionMode ? 'bg-rose-500 text-white hover:bg-rose-600' : 'bg-indigo-50 dark:bg-indigo-900/30 text-indigo-600 dark:text-indigo-400 hover:bg-indigo-100 dark:hover:bg-indigo-900/50'"
+                                            class="p-1.5 rounded-md transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
+                                            :title="selectionMode ? 'Cancel Selection' : 'Select Commands to Delete'">
                                             <span class="codicon codicon-trash" style="font-size: 16px;"></span>
                                         </button>
+                                        <!-- Add Custom Command -->
                                         <button @click="openCustomCommandModal()"
                                             class="p-1.5 bg-indigo-50 dark:bg-indigo-900/30 text-indigo-600 dark:text-indigo-400 rounded-md hover:bg-indigo-100 dark:hover:bg-indigo-900/50 transition-colors"
                                             title="Add Custom Command">
@@ -483,10 +485,9 @@
                                     </div>
                                 </div>
 
-                                <!-- Select Mode Toggle -->
-                                <!-- Select Mode Toggle and Actions -->
-                                <div class="mt-2 flex items-center justify-between gap-2">
-                                    <div class="flex items-center gap-2" x-show="selectionMode">
+                                <!-- Select Mode Actions (shown when in selection mode) -->
+                                <div class="mt-2 flex items-center justify-between gap-2" x-show="selectionMode">
+                                    <div class="flex items-center gap-2">
                                         <button @click="selectAllCommandsForDelete()"
                                             class="px-2.5 py-1.5 text-xs font-medium text-indigo-600 dark:text-indigo-400 hover:bg-indigo-50 dark:hover:bg-indigo-500/10 rounded-md transition-colors">
                                             Select All
@@ -495,19 +496,7 @@
                                             class="px-2.5 py-1.5 text-xs font-medium text-gray-600 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-slate-700 rounded-md transition-colors">
                                             Deselect All
                                         </button>
-                                        <button @click="deleteSelectedCommands()"
-                                            :disabled="selectedCommandIds.length === 0"
-                                            class="p-1.5 text-white bg-rose-500 hover:bg-rose-600 dark:bg-rose-600 dark:hover:bg-rose-700 rounded-md transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
-                                            title="Delete Selected">
-                                            <span class="codicon codicon-trash" style="font-size: 16px;"></span>
-                                        </button>
                                     </div>
-                                    <button @click="toggleSelectionMode()" :disabled="selectedCommand !== null"
-                                        :class="selectionMode ? 'bg-rose-500 text-white' : 'bg-gray-200 dark:bg-slate-700 text-gray-700 dark:text-slate-300'"
-                                        class="p-1.5 rounded-md hover:bg-rose-600 dark:hover:bg-rose-600 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed ml-auto"
-                                        :title="selectionMode ? 'Cancel Selection' : 'Select Commands to Delete'">
-                                        <span class="codicon codicon-trash" style="font-size: 16px;"></span>
-                                    </button>
                                 </div>
 
                                 <!-- Discovery progress -->
@@ -794,7 +783,11 @@
                                                 <button @click="deleteSelectedCommands()"
                                                     class="px-4 py-1.5 text-xs font-medium text-white bg-rose-500 hover:bg-rose-600 dark:bg-rose-600 dark:hover:bg-rose-700 rounded-md transition-colors flex items-center gap-1.5">
                                                     <span class="codicon codicon-trash" style="font-size: 14px;"></span>
-                                                    Delete (<span x-text="selectedCommandIds.length"></span>)
+                                                    <span class="inline-flex items-center gap-0.5">
+                                                        <span>Delete (</span>
+                                                        <span x-text="selectedCommandIds.length"></span>
+                                                        <span>)</span>
+                                                    </span>
                                                 </button>
                                             </div>
                                         </div>
